--- a/index.html
+++ b/index.html
@@ -437,6 +437,11 @@
 					</label>
 					<input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check visually-hidden" />
 					<label for="user-policy" class="modal-form-check-desc">
+						<span class="modal-form-fake-checkbox">
+							<svg class="agreed-icon" width="10px" height="8px">
+								<use href="./images/icons.svg#icon-agreed-icon"></use>
+							</svg>
+						</span>
 						I accept the terms and conditions of the <a href="#">Privacy Policy</a>
 					</label>
 					<button class="modal-form-submit" type="submit">Send</button>
