--- a/portfolio.html
+++ b/portfolio.html
@@ -229,6 +229,13 @@
 							</li>
 						</ul>
 					</div>
+					<div class="subscription-btn">
+						<b class="subscribe">Subscribe</b>
+						<form class="footer-submit-form">
+							<input type="mail" class="submit-form-input" name="user-email " placeholder="E-mail" />
+							<button type="submit" class="submit-form-btn"> Subscribe </button>
+						</form>
+					</div>
 				</div>
 			</div>
 		</footer>
