The homework with cerrected details.
Changed the modal-close button in the hover/focus. Underlined the Privacy Policy

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 								<use href="./images/icons.svg#icon-agreed-icon"></use>
 							</svg>
 						</span>
-						I accept the terms and conditions of the&nbsp; <a href="#" class="link">Privacy Policy</a>
+						I accept the terms and conditions of the&nbsp; <a href="#" class="privacy-agreed">Privacy Policy</a>
 					</label>
 					<button class="modal-form-submit" type="submit">Send</button>
 				</form>
